Add SparkJoiner Plugin Type and capabilities as specified in https://issues.cask.co/browse/CDAP-15910  - New plugin type with a join method that accepts a map of data collection, one data collection per input stage, and that returns a data collection  - Support in Spark2 runtime only, both in batch and streaming  - New test in DataPipelineTest

--- a/cdap-common/pom.xml
+++ b/cdap-common/pom.xml
@@ -135,6 +135,10 @@
       <artifactId>twill-core</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.lz4</groupId>
+      <artifactId>lz4-java</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.apache.twill</groupId>
       <artifactId>twill-api</artifactId>
     </dependency>
