Add flint plugin as a temporal Spark Joiner based on flint library (see https://issues.cask.co/browse/CDAP-15910)  - new flint hydrator plugin  - Update spark2 version from 2.1.3 to 2.3.0 as mandated by flint library  - Replace net.jpountz.l4z:1.3.0 library by org.l4z:1.4.0 library, for compatibility with spark 2.3.0  - Update maven-rat-plugin from 0.10 to 0.11 so as to skip it by "-Dskip.rat" on command-line

--- a/cdap-unit-test/pom.xml
+++ b/cdap-unit-test/pom.xml
@@ -152,8 +152,17 @@
           <groupId>org.scala-lang</groupId>
           <artifactId>scala-library</artifactId>
         </exclusion>
+        <exclusion>
+          <groupId>net.jpountz.lz4</groupId>
+          <artifactId>lz4</artifactId>
+        </exclusion>
       </exclusions>
       <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.lz4</groupId>
+      <artifactId>lz4-java</artifactId>
     </dependency>
 
   </dependencies>
